chore(backend): add dev subdomain to allowed CORS origins